force-app/main/default/objects/ServiceTerritory/fields/MSN_Contractor_Code__c.field-meta.xml
<CustomField>
    <fullName>MSN_Contractor_Code__c</fullName>
    <defaultValue>&quot;MSN&quot;</defaultValue>
    <description>Field &quot;Contractor Code&quot; that has been set up on each &quot;Purchasing Contract&quot; in EAM. The Value will always be &quot;MSN&quot;. This is used e.g. in the Subcontractors Claim process and is required as a column in the report/upload template in EAM.</description>
    <inlineHelpText>Field &quot;Contractor Code&quot; on the &quot;Purchasing Contract&quot; in EAM. The Value is always &quot;MSN&quot;.</inlineHelpText>
    <label>Contractor Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>