force-app/main/default/objects/ServiceTerritory/fields/MSN_Contractor_Name__c.field-meta.xml
<CustomField>
    <fullName>MSN_Contractor_Name__c</fullName>
    <description>Used to specify a (shorter) name for the Contractor using the Service Territory in addition to the (longer) Service Territory Name. For Example:  Hydrotech   instead of &quot;Hydrotech - Wastewater Reactive/Planned. This is used e.g. also in the Subcontractor Claims process to generate the &quot;Pro Forma Invoice Format&quot; field.</description>
    <inlineHelpText>Please enter a short name for the Contractor representing this Service Territory. For Example: Hydrotech</inlineHelpText>
    <label>Contractor Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>