force-app/main/default/objects/ServiceTerritory/fields/MSN_Subcontractor_ServiceTerritory__c.field-meta.xml
<CustomField>
    <fullName>MSN_Subcontractor_ServiceTerritory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to flag Service Territories assigned to Subcontractors of MSN. This is e.g. used in the Flow &quot;Assign to Subcontractor&quot; in order to give the user a list of all subcontractor territories the service appointment can be assigned to.</description>
    <inlineHelpText>Please tick this, if this Service Territory is used for a Subcontractor.</inlineHelpText>
    <label>Subcontractor Service Territory</label>
    <type>Checkbox</type>
</CustomField>