force-app/main/default/objects/ServiceTerritory/fields/MSN_Supplier_Code__c.field-meta.xml
<CustomField>
    <fullName>MSN_Supplier_Code__c</fullName>
    <description>Supplier Code is used in Watercares &quot;EAM&quot; as a unique identifier for any subcontractors (e.g. Hydrotech) that have been set up as &quot;Purchasing Contracts&quot;</description>
    <externalId>true</externalId>
    <inlineHelpText>&quot;Supplier&quot; field on the Purchasing Contract in EAM (e.g. S00001004 for Hydrotech)</inlineHelpText>
    <label>Supplier Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>