force-app/main/default/objects/ServiceTerritory/fields/Subcontractor_not_using_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_not_using_Salesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subcontractor not using Salesforce</label>
    <type>Checkbox</type>
</CustomField>