force-app/main/default/objects/ServiceTerritory/listViews/All_ServiceTerritories.listView-meta.xml
<ListView>
    <fullName>All_ServiceTerritories</fullName>
    <columns>Name</columns>
    <columns>IsActive</columns>
    <columns>OperatingHours</columns>
    <columns>ParentTerritory</columns>
    <columns>MSN_Subcontractor_ServiceTerritory__c</columns>
    <columns>Subcontractor_using_Salesforce__c</columns>
    <columns>Subcontractor_not_using_Salesforce__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Territories</label>
</ListView>